# otto

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PKGBUILD  PKGBUILD-git  PKGBUILD-nightly-bin  README.md  RELEASE.md  compile_wlcs.sh  otto.crash  otto_config.example.toml  otto_topbar.toml  perf_sample.sh  prerequisites.sh  test-notifications.sh
.claude/agents/: spec-sync.md
.github/instructions/: review.instructions.md  spec-sync.instructions.md
.github/workflows/: ci.yml
components/otto-bar/: Cargo.toml  README.md
components/otto-islands/: Cargo.toml  README.md
components/otto-islands/src/: activity.rs  dbus_service.rs  main.rs  music.rs  notifications.rs  renderer.rs  state.rs
components/otto-kit/: Cargo.toml  README.md
components/otto-kit/examples/: app_layout.rs  button_demo.rs  center_gravity_test.rs  containers.rs  dock_application_layer.rs  dock_application_simple.rs  input_field_demo.rs  label_demo.rs  lottie_demo.rs  lucide_icons_demo.rs  menubar_next_example.rs  music_notch_layer.rs  notification_demo.rs  simple_app.rs  typography_demo.rs  window_with_titlebar.rs  window_with_toolbar.rs
components/otto-kit/src/: color_scheme.rs  common.rs  desktop_entry.rs  icon_theme.rs  icons.rs  input.rs  lib.rs  lottie.rs  testing.rs  theme.rs  typography.rs  utils.rs
components/otto-kit/src/app_runner/: context.rs  mod.rs
components/otto-kit/src/app_runner/handlers/: mod.rs
components/otto-kit/src/components/: mod.rs
components/otto-kit/src/components/button/: button.rs  mod.rs
components/otto-kit/src/components/container/: frame.rs  mod.rs  stack.rs  traits.rs
components/otto-kit/src/components/context_menu/: context_menu.rs  mod.rs  renderer.rs  state.rs  style.rs
components/otto-kit/src/components/icon/: icon.rs  mod.rs  svg_icon.rs
components/otto-kit/src/components/input_field/: input_field.rs  mod.rs
components/otto-kit/src/components/label/: label.rs  mod.rs
components/otto-kit/src/components/layer/: mod.rs  surface.rs
components/otto-kit/src/components/layers/: frame.rs  mod.rs  stack.rs
components/otto-kit/src/components/menu_bar/: mod.rs  renderer.rs  state.rs  style.rs
components/otto-kit/src/components/menu_item/: data.rs  group.rs  menu_item.rs  mod.rs  renderer.rs  style.rs
components/otto-kit/src/components/titlebar/: mod.rs  titlebar.rs
components/otto-kit/src/components/toolbar/: mod.rs  toolbar.rs
components/otto-kit/src/components/window/: application_window.rs  mod.rs
components/otto-kit/src/protocols/: mod.rs
components/otto-kit/src/rendering/: context.rs  layers_renderer.rs  mod.rs  surface.rs
components/otto-kit/src/surfaces/: common.rs  dockitem.rs  layer_shell.rs  mod.rs  popup.rs  subsurface.rs  toplevel.rs
components/otto-kit/src/utils/: color_extraction.rs  focus_watcher.rs  mod.rs
components/otto-remote-display/: Cargo.toml  build.rs
components/otto-remote-display/csrc/: fairplay_sender.c
components/otto-remote-display/src/: discovery.rs  encoder.rs  hls.rs  main.rs  rdp.rs  screenshare.rs
components/otto-remote-display/src/airplay/: auth.rs  fairplay.rs  mod.rs  ntp.rs  stream.rs  tlv.rs
components/topbar/: Cargo.toml
components/topbar/src/: animation.rs  app.rs  appmenu.rs  bar.rs  clock.rs  config.rs  dbusmenu.rs  focus.rs  main.rs  tray.rs
components/xdg-desktop-portal-otto/: org.freedesktop.impl.portal.desktop.otto.service  portals.conf.example
debian/: changelog  control  copyright  rules
docs/developer/: overlay-scanout-hardware.md  perf-analysis-islands.md  rendering-optimizations.md  scanout-explicit-sync-fix-plan.md  screencopy.md  screenshare.md  screenshot-plan.md  subsurface-rendering-flow.md  testing.md  virtual-pointer.md  window-scanout-promotion.md
docs/user/: autostart.md  configuration.md
protocols/: otto-dock-v1.xml  otto-scene-v1.xml  otto-surface-style-unstable-v1.xml
sample-clients/hello-design/: CONTAINERS.md  Cargo.toml  README.md
sample-clients/hello-design/docs/: containers.md
sample-clients/hello-design/examples/: application_window.rs  containers.rs  rounded_corners.rs  simple_app.rs  simple_menu.rs  simple_window.rs  typography_demo.rs
sample-clients/hello-design/src/: common.rs  lib.rs  typography.rs
sample-clients/hello-design/src/components/container/: frame.rs  mod.rs  stack.rs  traits.rs
sample-clients/hello-design/src/components/label/: label.rs  mod.rs
sample-clients/hello-design/src/components/layer/: mod.rs
sample-clients/hello-design/src/components/menu/: drawing.rs  mod.rs  surface.rs
sample-clients/hello-design/src/components/menu_item/: group.rs  menu_item.rs  mod.rs
sample-clients/hello-design/src/components/window/: application_window.rs  mod.rs
sample-clients/hello-design/src/rendering/: surface.rs
sample-clients/hello-design/src/surfaces/: common.rs  popup.rs  subsurface.rs  toplevel.rs
scripts/: README.md  start_session.sh  test-notifications.sh  test-screenshare.sh
specs/: README.md  SPEC-TEMPLATE.md  context-menus.md  dynamic-island-milestones.md  dynamic-island.md  notification-daemon.md  notification-island.md  topbar.md  window-placement.md  window-scanout-promotion.md  workspaces-multi-output.md
src/: cursor.rs  drawing.rs  focus.rs  gpu_report.rs  headless.rs  input_handler.rs  interactive_view.rs  lib.rs  main.rs  render_metrics.rs  settings_service.rs  skia_renderer.rs  winit.rs  x11.rs
src/audio/: media_control.rs  mod.rs  sound_player.rs  volume.rs
src/config/: default_apps.rs  mod.rs  shortcuts.rs
src/input/: actions.rs  gestures.rs  keyboard.rs  pointer.rs
src/otto_dock/: mod.rs  protocol.rs
src/render_elements/: scene_element.rs  skia_element.rs  workspace_render_elements.rs
src/renderer/: frame.rs  mod.rs  sync.rs
src/resources/: otto.desktop
src/sc_layer_shell/: protocol.rs
src/screenshare/: dbus_service.rs  mod.rs  pipewire_stream.rs
src/shell/: element.rs  grabs.rs  layer.rs  mod.rs  x11.rs  xdg.rs
src/state/: app_management.rs  (+13 more)
tests/: headless_basic.rs
wlcs_otto/: Cargo.toml
wlcs_otto/src/: ffi_wrappers.rs  lib.rs  main_loop.rs  renderer.rs
(+60 files in other folders)
