[package]
name = "wlcs_otto"
version = "0.0.2"
edition = "2021"
license = "MIT"
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
otto = { path = "../", default-features = false, features = [
    "egl",
    "udev",
    "winit",
    "debug",
] }
wayland-sys = { version = "0.30.1", features = ["client", "server"] }
libc = "0.2"
memoffset = "0.6"
cgmath = "0.18"
nix = "0.24"
tokio = { version = "1", features = ["full"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
rev = "f9d4d7ffd82d743fb89737b3ffaed57505b477d1"
default-features = false
features = [
    "wayland_frontend",
    "backend_egl",
    "use_system_lib",
]

[dependencies.laye-rs]
git = "https://github.com/nongio/layers"
tag = "v1.10.0"
features = ["export-taffy"]
