[package]
name = "otto-kit"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-egl = "0.32"
wayland-cursor = "0.31"
wayland-scanner = "0.31"
wayland-backend = "0.3"
gl = "0.14"
khronos-egl = { version = "6", features = ["dynamic"] }
calloop = "0.13"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
futures-util = "0.3"
xdgkit = "3.2.5"
resvg = "0.44.0"
usvg = "0.44.0"
lazy_static = "1.4"
libc = "0.2"
pipewire = "0.9"
freedesktop-desktop-entry = "0.7.5"

[features]
default = []
debugger = ["laye-rs/debugger"]

[dependencies.laye-rs]
git = "https://github.com/nongio/layers"
tag = "v1.8.0"
features = ["export-taffy"]

[dependencies.skia-safe]
version = "=0.93"
features = ["gl", "textlayout", "svg", "skottie"]

[[example]]
name = "simple_app"
path = "examples/simple_app.rs"

[[example]]
name = "dock_application_simple"
path = "examples/dock_application_simple.rs"

[[example]]
name = "dock_application_layer"
path = "examples/dock_application_layer.rs"

[[example]]
name = "center_gravity_test"
path = "examples/center_gravity_test.rs"

